# nvbenjo

./: .gitignore  Dockerfile  README.md  main.py  noxfile.py  pyproject.toml
.github/workflows/: ruff.yml  test.yml
docs/: conf.py  configuration.md  examples.md  index.md  python_api.md
nvbenjo/: __init__.py  benchmark.py  cfg.py  cli.py  onnx_utils.py  plot.py  plugin.py  system_info.py  torch_utils.py  utils.py
nvbenjo/conf/: bert.yaml  default.yaml  huggingface.yaml  onnxsilero.yaml  small.yaml  torchvision.yaml
src/nvbenjo/: benchmark.py  cfg.py  cli.py  onnx_utils.py  plot.py  system_info.py  torch_utils.py  utils.py
src/nvbenjo/conf/: bert.yaml  compile_example.yaml  complex_example.yaml  defaulttest.yaml  example.yaml  huggingface.yaml  onnx.yaml  onnxsilero.yaml  small.yaml
src/nvbenjo/conf/hydra/help/: nvbenjo_app_help.yaml
tests/: test_cli.py  test_onnx_cli.py  test_onnx_utils.py  test_plot.py  test_system_info.py  test_torch_python_api.py  test_torch_utils.py  test_utils.py
tests/conf/: default.yaml  duplicate_model_name.yaml  input_min_max.yaml  small_single.yaml  torch_load.yaml  torch_load_multiinput.yaml
