[project]
name = "nvbenjo"
version = "0.1.0"
authors = [{"name" = "lukas_jkl"}]
description = "Benchmark utility for NVIDIA GPU's"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
  "torchvision",
  "torchaudio",
  "nvitop",
  "psutil",
  "py-cpuinfo",
  "hydra-core",
  "hydra_colorlog",
  "nvidia-ml-py",
  "pandas",
  "seaborn",
  "rich"
]
[project.scripts]
nvbenjo = "nvbenjo.cli:nvbenjo"
[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "ipython",
    "pytest",
    "ty",
]
[tool.setuptools]
include-package-data = true
packages = ["nvbenjo"]
[tool.setuptools.package-data]
nvbenjo = ["conf/*.yml", "conf/*.yaml"]
[tool.ruff]
line-length = 120
[tool.ruff.lint.pydocstyle]
convention = "numpy"
