[project]
name = "nvbenjo"
version = "0.1.0"
authors = [{"name" = "lukas_jkl"}]
description = "Benchmark utility for NVIDIA GPU's"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "torchvision",
  "torchaudio",
  "nvitop",
  "psutil",
  "py-cpuinfo",
  "hydra-core",
  "hydra_colorlog",
  "nvidia-ml-py",
  "pandas",
  "seaborn",
  "rich"
]
[project.scripts]
nvbenjo = "nvbenjo.cli:nvbenjo"
[project.optional-dependencies]
onnx-cpu = [
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
]
onnx-gpu = [
    "onnx>=1.14.0",
    "onnxruntime-gpu>=1.15.0",
]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "ipython",
    "pytest",
    "ty",
    "nox"
]
[tool.setuptools]
include-package-data = true
packages = ["nvbenjo"]
[tool.setuptools.package-data]
nvbenjo = ["conf/*.yml", "conf/*.yaml"]
[tool.ruff]
line-length = 120
[tool.ruff.lint.pydocstyle]
convention = "numpy"
